@@ -1,3 +1,11 @@
+2005-05-27  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* README:       Bumped patchlevel to 8.4.10
+	* generic/tk.h:
+	* macosx/Wish.pbproj/project.pbxproj:
+	* unix/configure, unix/configure.in, unix/tk.spec:
+	* win/configure, win/configure.in:
+
 2005-05-27  Todd Helfter <tmh@users.sourceforge.net>
 
 	* library/menu.tcl: correct the sticky behavior of menus posted by
